Replace localhost URL with deployed Vercel URL

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatterHub</title>
-    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script defer src="https://chatter-hub-pink.vercel.app/socket.io/socket.io.js"></script>
     <script defer src="js/client.js"></script>
      <!-- font awesome link -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
