--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatterHub</title>
-    <script defer src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script defer src="js/client.js"></script>
      <!-- font awesome link -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -17,20 +17,20 @@
     <nav class="navbar">
         <div class="navbar-left">
             <i class="ri-wechat-fill"></i>
-            <h1>ChatterHub</h1>
+            <h1>Chatter Hub</h1>
         </div>
         <div class="navbar-right">
             <i class="fa-solid fa-phone"></i>
             <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
     </nav>
-    
+
     <div class="main">
         <aside class="sidebar">
             <h2>Active Chatters</h2>
             <ul id="active-members"></ul>
         </aside>
-        
+
         <div class="chat-container">
             <div class="messages" id="messages"></div>
             <div class="send">
